Modification du json et modification de la suppression